--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-*.iml
 .gradle
 /local.properties
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
-/.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
@@ -13,3 +11,32 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# User-specific stuff
+*.iml
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/codeStyleConfig.xml
+.idea/tasks.xml
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/caches
+.idea/*
+.idea/misc.xml
+.idea/modules.xml
+
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
